# nfl25-agent

./: $PROFILE.txt  backtest_future_thresholds.py  project_tree.txt  pyproject.toml
data/: 2025_nfl_schedule.csv  dvoa_data.csv  survivor_bg_likes.csv  survivor_bg_likes_OPP_matrix.csv  survivor_bg_likes_YN_enriched.csv  survivor_bg_likes_with_sched.csv
docs/: index.html
exports/: member_week01.html
logs/: odds_markets_summary_wk1.csv  odds_sample_season2025_wk1.json
nfl25.egg-info/: PKG-INFO  SOURCES.txt
notes/: 1 through 3 tests and outputs.txt  Fetch Nfl Odds — Process & Change Guide (v3.3.docx  Master Dashboard Audit — Safe‑route Plan & Weekly Spot‑check (v0.docx  Member Dashboard — V2 8.19.25.docx  Millions Dashboard — Clarifying Questions.docx  Millions Dashboard — Where We’ve Been, Where We Are, Where We’re Going 8.16.25.docx  Millions Dashboards — Goals, Pre‑season Plan, In‑season Roadmap (v1).docx  Millions Survivor Doc 8.19.25.docx  Millions V0_8.14.25.docx  Millions – Technical Framework & Runbook v0.docx  Millions — Data & Weekly Runbook (v1.docx  Millions — Data Provenance & Audit Playbook (v0.docx  NFL25 Agent 1.0.docx  Nfl25 Agent — Millions & Survivor Handoff (full Docs V2.docx  Nfl25 Agent — Millions Pass‑off & Handover (v1).docx  OneDriveDesktopnfl25-agentscripts.txt  Survivor Tool Documentation 8.7.25.docx  Survivor Tool — Daily Summary & 3‑day Sprint (aug 13, 2025).docx  Survivor V1.0 — Updated Spot Value Updates 8.14.25.docx  Survivor V1_documentation 8.14.25.docx  Survivor → Millions_ Dvoa Merge Step‑by‑step Guide.docx  team_reports.csv  (+2 more)
(+231 files in other folders)
